--- a/agi_plz_ortschaften_pub/build.gradle
+++ b/agi_plz_ortschaften_pub/build.gradle
@@ -15,7 +15,7 @@ def nameOfZipWithPLZOrtschaften = 'PLZO_INTERLIS_LV95.zip'
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
 def pathToDataZip = Paths.get(pathToTempFolder, "PLZO_INTERLIS_LV95.zip")
-def xtfFilePath = Paths.get(pathToUnzipFolder.toString(), 'PLZO_ITF_LV95.itf')
+def xtfFilePath = Paths.get(pathToUnzipFolder.toString(), 'PLZO_INTERLIS_LV95', 'PLZO_ITF_LV95.itf')
 
 
 task download(type: Download){
@@ -36,21 +36,12 @@ task unzipData(type: Copy, dependsOn: 'download'){
     }
     from zipTree(pathToDataZip)
     into file(pathToUnzipFolder)
+    include "**/*.itf"
 }
 
 
-task loadFiles(dependsOn: 'unzipData'){
-    doLast{
-        FileTree tree = fileTree('/tmp/unzip_data')
-        tree.each {
-            println it.name
-        }
-    }
-}
-
-
-task dbImport(type: Ili2pgImport, dependsOn: 'loadFiles'){
-    description = "Import swissBoundaries3D-Data into database"
+task dbImport(type: Ili2pgImport, dependsOn: 'unzipData'){
+    description = "Import plz_ortschaften-Data into database"
     doLast {
         println "Data imported into db: " + sourceDbUrl
     }
@@ -65,19 +56,17 @@ task dbImport(type: Ili2pgImport, dependsOn: 'loadFiles'){
 
 
 task convertData(type: Db2Db, dependsOn: 'dbImport'){
-    description = "Convert swissBoundaries3D-Data"
+    description = "Convert plz_ortschaften-Data"
     doLast {
-        println "SwissBoundaries3D-Data are converted."
+        println "plz_ortschaften-Data are converted."
     }
     finalizedBy 'removeFiles'
 
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
+    sourceDb = [targetDbUrl, targetDbUser, targetDbPass]//[sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('bezirke.sql', 'agi_swissboundaries3d_pub.swissboundaries3d_bezirk', true),
-            new TransferSet('hoheitsgebiet.sql', 'agi_swissboundaries3d_pub.swissboundaries3d_hoheitsgebiet', true),
-            new TransferSet('kanton.sql', 'agi_swissboundaries3d_pub.swissboundaries3d_kanton', true),
-            new TransferSet('land.sql', 'agi_swissboundaries3d_pub.swissboundaries3d_land', true)
+            new TransferSet('plzortschaften_ortschaft.sql', 'agi_plz_ortschaften_pub.plzortschaften_ortschaft', true),
+            new TransferSet('plzortschaften_postleitzahl.sql', 'agi_plz_ortschaften_pub.plzortschaften_postleitzahl', true)
     ];
 }
 
