--- a/nplso2nplch/build.gradle
+++ b/nplso2nplch/build.gradle
@@ -16,5 +16,9 @@ task transferNplso2Nplch(type: SqlExecutor){
                 'arp_npl_mgdm_rechtsvorschrften_hinweisweiteredokumente.sql',
                 'arp_npl_mgdm_geobasisdaten_typ_dokument.sql',
                 'arp_npl_mgdm_multilingualuri.sql',
-                'arp_npl_mgdm_localiseduri.sql'];
+                'arp_npl_mgdm_localiseduri.sql',
+                'arp_npl_mgdm_laermmp95_v1_1geobasisdaten_typ.sql',
+                'arp_npl_mgdm_geobasisdaten_laermempfindlichkeit_zonenflaeche.sql',
+                'arp_npl_mgdm_laermmp95_v1_1rechtsvorschrften_dokument.sql',
+                'arp_npl_mgdm_laermmp95_v1_1rechtsvorschften_hinweisweiteredokumente.sql'];
 }
