--- a/afu_vsb_pub/build.gradle
+++ b/afu_vsb_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuVsb'
 
 task transferAfuVsb(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_vsb_pub_pruefperimeter.sql', 'afu_vsb_pub.pruefperimeter', true),
             new TransferSet('afu_vsb_pub_nabodat.sql', 'afu_vsb_pub.nabodat', true),
