--- a/agi_mopublic_pub/build.gradle
+++ b/agi_mopublic_pub/build.gradle
@@ -12,8 +12,8 @@ defaultTasks 'transferAgiMopublic'
 
 task transferAgiMopublic(type: Db2Db){
     description = "Datenumbau in das SO-MOpublic-Publikationsmodell."    
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet("agi_mopublic_pub_mopublic_bodenbedeckung.sql", 'agi_mopublic_pub.mopublic_bodenbedeckung', true),
             new TransferSet("agi_mopublic_pub_mopublic_bodenbedeckung_proj.sql", 'agi_mopublic_pub.mopublic_bodenbedeckung_proj', true),
