--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -53,7 +53,7 @@ task validateDataset(type: IliValidator, dependsOn: 'checkXtfName') {
 // Bis klar ist, was IliValidator-Task genau macht.
 task replaceDataset (type: Ili2pgReplace, dependsOn: 'checkXtfName') {
     description = "Ersetzt einen Datensatz (=XTF) in der PostgreSQL-Datenbank."
-    database = [sourceDbUrl, sourceDbUser, sourceDbPass]
+    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
     dbschema = "arp_npl"
     models = "SO_Nutzungsplanung_20170915"
     disableValidation = false
@@ -65,8 +65,8 @@ task replaceDataset (type: Ili2pgReplace, dependsOn: 'checkXtfName') {
 // No Pub-Db yet.
 task transformArpNpl(type: Db2DbTask) {
     description = "Datenumbau in das Publikationsmodell."
-    sourceDb =  [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
+    sourceDb =  [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet("transform_arp_npl_pub_nutzungsplanung_grundnutzung_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_grundnutzung', true),
             new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_flaeche_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_flaeche', true),
