--- a/arp_wanderwege_pub/build.gradle
+++ b/arp_wanderwege_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferArpWanderwege'
 
 task transferArpWanderwege(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('arp_wanderwege_pub_wanderweg.sql', 'arp_wanderwege_pub.wanderweg', true)
     ];
