--- a/arp_zonenplan_pub/build.gradle
+++ b/arp_zonenplan_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferArpZonenplan'
 
 task transferArpZonenplan(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('arp_zonenplan_pub_digitalisierter_zonenplan.sql',
                     'arp_zonenplan_pub.digitalisierter_zonenplan', true)
