--- a/afu_ekat2005_pub/build.gradle
+++ b/afu_ekat2005_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuEkat2005'
 
 task transferAfuEkat2005(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_ekat2005_pub_gesamtemission.sql', 'afu_ekat2005_pub.gesamtemission', true),
             new TransferSet('afu_ekat2005_pub_industrie_gewerbe.sql', 'afu_ekat2005_pub.industrie_gewerbe', true),
