--- a/afu_ekat2010_pub/build.gradle
+++ b/afu_ekat2010_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuEkat2010'
 
 task transferAfuEkat2010(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_ekat2010_pub_uplus.sql', 'afu_ekat2010_pub.uplus', true),
             new TransferSet('afu_ekat2010_pub_gesamtemission.sql', 'afu_ekat2010_pub.gesamtemission', true),
