--- a/afu_erdwaerme_pub/build.gradle
+++ b/afu_erdwaerme_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuErdwaerme'
 
 task transferAfuErdwaerme(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_erdwaerme_pub_private_quelle.sql', 'afu_erdwaerme_pub.private_quelle', true),
             new TransferSet('afu_erdwaerme_pub_problembereich.sql', 'afu_erdwaerme_pub.problembereich', true),
