--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuGewaesserschutz'
 
 task transferAfuGewaesserschutz(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_gewaesserschutz_pub_aww_gsab.sql', 'afu_gewaesserschutz_pub.aww_gsab', true),
             new TransferSet('afu_gewaesserschutz_pub_aww_gszoar.sql', 'afu_gewaesserschutz_pub.aww_gszoar', true),
