--- a/afu_immissionskarten_pub/build.gradle
+++ b/afu_immissionskarten_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuImmissionskarten'
 
 task transferAfuImmissionskarten(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_immissionskarten_pub_luftbelastung_2010_2020.sql',
                     'afu_immissionskarten_pub.luftbelastung_2010_2020', true)
