--- a/afu_ingeso_pub/build.gradle
+++ b/afu_ingeso_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuIngeso'
 
 task transferAfuIngeso(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_ingeso_pub_flaechenobjekt.sql', 'afu_ingeso_pub.flaechenobjekt', true),
             new TransferSet('afu_ingeso_pub_punktobjekt.sql', 'afu_ingeso_pub.punktobjekt', true)
