--- a/afu_naturgefahren_pub/build.gradle
+++ b/afu_naturgefahren_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuNaturgefahren'
 
 task transferAfuNaturgefahren(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_naturgefahren_pub_naturgefahren_ereignis.sql',
                     'afu_naturgefahren_pub.naturgefahren_ereignis', true),
