--- a/afu_schadendienst_pub/build.gradle
+++ b/afu_schadendienst_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuSchadendienst'
 
 task transferAfuSchadendienst(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_schadendienst_pub_schadenfall.sql', 'afu_schadendienst_pub.schadenfall', true),
             new TransferSet('afu_schadendienst_pub_nichtschadenfall.sql', 'afu_schadendienst_pub.nichtschadenfall',
