--- a/afu_sorkas_pub/build.gradle
+++ b/afu_sorkas_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuSorkas'
 
 task transferAfuSorkas(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_sorkas_pub_betriebe.sql', 'afu_sorkas_pub.betriebe', true),
             new TransferSet('afu_sorkas_pub_natstr.sql', 'afu_sorkas_pub.natstr', true),
