--- a/afu_uplus_pub/build.gradle
+++ b/afu_uplus_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAfuUplus'
 
 task transferAfuUplus(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_uplus_pub_anlage.sql', 'afu_uplus_pub.anlage', true),
             new TransferSet('afu_uplus_pub_tank.sql', 'afu_uplus_pub.tank', true)
