--- a/agi_adressen_pub/build.gradle
+++ b/agi_adressen_pub/build.gradle
@@ -4,8 +4,8 @@ import ch.so.agi.gretl.api.TransferSet
 defaultTasks 'transferAgiAdressen'
 
 task transferAgiAdressen(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_adressen_pub_richtung_strassenachse.sql', 'agi_adressen_pub.richtung_strassenachse',
                     true),
