--- a/agi_check_ili_export/build.gradle
+++ b/agi_check_ili_export/build.gradle
@@ -49,7 +49,7 @@ models.each { model ->
     
     task "checkModel_$modelName"(type: Ili2pgExport) {
         description = "INTERLIS validation against database schema: $dbSchema ($modelName)"
-        database = [sourceDbUrl, sourceDbUser, sourceDbPass]
+        database = [dbUriSogis, dbUserSogis, dbPwdSogis]
         dbschema = dbSchema
         models = modelName
         disableValidation = false
