--- a/agi_hoheitsgrenzsteine_pub/build.gradle
+++ b/agi_hoheitsgrenzsteine_pub/build.gradle
@@ -4,8 +4,8 @@ import ch.so.agi.gretl.api.TransferSet
 defaultTasks 'transferAgiHoheitsgrenzsteine'
 
 task transferAgiHoheitsgrenzsteine(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_hoheitsgrenzsteine_pub_kantonsgrenzstein.sql',
                     'agi_hoheitsgrenzsteine_pub.kantonsgrenzstein', true)
