--- a/arp_oev_guete_pub/build.gradle
+++ b/arp_oev_guete_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferArpOevGuete'
 
 task transferArpOevGuete(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('arp_oev_guete_pub_oevgueteklasse.sql', 'arp_oev_guete_pub.oevgueteklasse', true)
     ];
