--- a/avt_verkehrszaehlung_pub/build.gradle
+++ b/avt_verkehrszaehlung_pub/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAvtVerkehrszaehlung'
 
 task transferAvtVerkehrszaehlung(type: Db2Db){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('avt_verkehrszaehlung_pub_zaehlstellen.sql', 'avt_verkehrszaehlung_pub.zaehlstellen', true)
     ];
