--- a/awjf_pub/build.gradle
+++ b/awjf_pub/build.gradle
@@ -3,8 +3,8 @@ import ch.so.agi.gretl.steps.*
 defaultTasks 'transferAwjf'
 
 task transferAwjf(type: Db2DbTask){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
         new TransferSet('awjf_pub_wald_uebersicht.sql', 'awjf_pub.wald_uebersicht', true),
         new TransferSet('awjf_pub_wap_bst.sql', 'awjf_pub.wap_bst', true),
