--- a/arp_naturschutz_pub/build.gradle
+++ b/arp_naturschutz_pub/build.gradle
@@ -1,10 +1,13 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferArpNaturschutz'
 
-task transferArpNaturschutz(type: Db2DbTask){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+task transferArpNaturschutz(type: Db2Db){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('arp_naturschutz_pub_karch_objekt.sql', 'arp_naturschutz_pub.karch_objekt', true),
             new TransferSet('arp_naturschutz_pub_amphibienstandort.sql', 'arp_naturschutz_pub.amphibienstandort', true),
