--- a/alw_grundlagen_pub/build.gradle
+++ b/alw_grundlagen_pub/build.gradle
@@ -1,10 +1,13 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAlwGrundlagen'
 
-task transferAlwGrundlagen(type: Db2DbTask){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+task transferAlwGrundlagen(type: Db2Db){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('alw_grundlagen_pub_fruchtfolgeflaechen.sql', 'alw_grundlagen_pub.fruchtfolgeflaechen',
                     true),
