--- a/agi_swisstlm3d_pub/build.gradle
+++ b/agi_swisstlm3d_pub/build.gradle
@@ -1,10 +1,13 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAgiSwisstlm3d'
 
-task transferAgiSwisstlm3d(type: Db2DbTask){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+task transferAgiSwisstlm3d(type: Db2Db){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_swisstlm3d_pub_eisenbahn.sql', 'agi_swisstlm3d_pub.eisenbahn', true),
             new TransferSet('agi_swisstlm3d_pub_stehendes_gewaesser.sql', 'agi_swisstlm3d_pub.stehendes_gewaesser',
