--- a/alw_gelan_pub/build.gradle
+++ b/alw_gelan_pub/build.gradle
@@ -1,14 +1,16 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAlwGelan'
 
-task transferAlwGelan(type: Db2DbTask){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+task transferAlwGelan(type: Db2Db){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('alw_gelan_pub_bienenstandorte.sql', 'alw_gelan_pub.bienenstandorte', true),
             new TransferSet('alw_gelan_pub_bienen_sperrgebiete.sql', 'alw_gelan_pub.bienen_sperrgebiete', true),
-            new TransferSet('alw_gelan_pub_streptomycineinsatz.sql', 'alw_gelan_pub.streptomycineinsatz', true),
             new TransferSet('alw_gelan_pub_feuerbrand_schutzobjekte.sql', 'alw_gelan_pub.feuerbrand_schutzobjekte',
                     true),
             new TransferSet('alw_gelan_pub_feuerbrand_schutzperimeter.sql', 'alw_gelan_pub.feuerbrand_schutzperimeter',
