Angepasst auf aktuelle Syntax

--- a/agi_hoehen_2014_pub/build.gradle
+++ b/agi_hoehen_2014_pub/build.gradle
@@ -1,10 +1,11 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
 
 defaultTasks 'transferAgiHoehen2014'
 
-task transferAgiHoehen2014(type: Db2DbTask){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+task transferAgiHoehen2014(type: Db2Db){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_hoehen_2014_pub_hoehenkurven_10m_vereinfacht.sql',
                     'agi_hoehen_2014_pub.hoehenkurven_10m_vereinfacht', true),
