Update auf neue Syntax

--- a/agi_baulinien_pub/build.gradle
+++ b/agi_baulinien_pub/build.gradle
@@ -1,10 +1,11 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
 
 defaultTasks 'transferAgiBaulinien'
 
-task transferAgiBaulinien(type: Db2DbTask){
-    sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
-    targetDb = [targetDbUrl, targetDbUser, targetDbPass]
+task transferAgiBaulinien(type: Db2Db){
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_baulinien_pub_baulinie.sql', 'agi_baulinien_pub.baulinie', true)
     ];
