--- a/agi_av_mocheckso_pub/build.gradle
+++ b/agi_av_mocheckso_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 defaultTasks 'transferAgiAvMocheckso'
 
-task transferAgiAvMocheckso(type: Db2DbTask){
+task transferAgiAvMocheckso(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
